[project]
name = "trading-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Herman",email = "daniel.herman@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy (>=1.15.3,<2.0.0)",
    "polars (>=1.31.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "streamlit (>=1.46.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
